Salesforce_Assignment/objects/In_Cart__c.object
<CustomObject>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <label>Product List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <label>Product Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Total_Price__c</fullName>
        <formula>Product_List_Price__c *  Product_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>In Cart</label>
    <nameField>
        <label>In Cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>